--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="./styles/orders.css" />
+
     <title>React App</title>
   </head>
   <body>
