--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="./styles/footer.css" />
     <link rel="stylesheet" href="./styles/cart.css" />
     <link rel="stylesheet" href="./styles/orders.css" />
+    <link rel="stylesheet" href="./styles/MoreDetails.css" />
+    <link rel="stylesheet" href="./styles/tkani.css" />
 
     <title>React App</title>
   </head>
