--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
     <link rel="stylesheet" href="./styles/orders.css" />
     <link rel="stylesheet" href="./styles/MoreDetails.css" />
     <link rel="stylesheet" href="./styles/tkani.css" />
+    <link rel="stylesheet" href="./styles/good.css" />
+    <link rel="stylesheet" href="./styles/footer_mob.css" />
+    <link rel="stylesheet" href="./styles/auth_forms.css" />
+    <link rel="stylesheet" href="./styles/recovery.css" />
 
     <title>React App</title>
   </head>
