--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="./styles/footer_mob.css" />
     <link rel="stylesheet" href="./styles/auth_forms.css" />
     <link rel="stylesheet" href="./styles/recovery.css" />
+    <link rel="stylesheet" href="./styles/lk.css" />
 
     <title>React App</title>
   </head>
