--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="./styles/auth_forms.css" />
     <link rel="stylesheet" href="./styles/recovery.css" />
     <link rel="stylesheet" href="./styles/lk.css" />
+    <link rel="stylesheet" href="./styles/make_order.css" />
 
     <title>React App</title>
   </head>
