--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="./styles/lk.css" />
     <link rel="stylesheet" href="./styles/make_order.css" />
     <link rel="stylesheet" href="./styles/good_mobile.css" />
+    <link rel="stylesheet" href="./styles/about.css" />
 
     <title>React App</title>
   </head>
