--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="./styles/make_order.css" />
     <link rel="stylesheet" href="./styles/good_mobile.css" />
     <link rel="stylesheet" href="./styles/about.css" />
+    <link rel="stylesheet" href="./styles/about_mob.css" />
 
     <title>React App</title>
   </head>
