--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="./styles/good_mobile.css" />
     <link rel="stylesheet" href="./styles/about.css" />
     <link rel="stylesheet" href="./styles/about_mob.css" />
+    <link rel="stylesheet" href="./styles/cash.css" />
 
     <title>React App</title>
   </head>
