--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="./styles/about.css" />
     <link rel="stylesheet" href="./styles/about_mob.css" />
     <link rel="stylesheet" href="./styles/cash.css" />
+    <link rel="stylesheet" href="./styles/edit-profile.css" />
 
     <title>React App</title>
   </head>
