--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <link rel="stylesheet" href="./styles/about_mob.css" />
     <link rel="stylesheet" href="./styles/cash.css" />
     <link rel="stylesheet" href="./styles/edit-profile.css" />
+    <link rel="stylesheet" href="./styles/personal_data.css" />
 
     <title>React App</title>
   </head>
