--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="./styles/edit-profile.css" />
     <link rel="stylesheet" href="./styles/edit-profile-mob.css" />
     <link rel="stylesheet" href="./styles/personal_data.css" />
+    <link rel="stylesheet" href="./styles/personal_data_mob.css" />
 
     <title>React App</title>
   </head>
