--- a/client/public/index.html
+++ b/client/public/index.html
@@ -50,6 +50,8 @@
     <link rel="stylesheet" href="./styles/md-mob.css" />
     <link rel="stylesheet" href="./styles/orders_mob.css" />
     <link rel="stylesheet" href="./styles/cart_mob.css" />
+    <link rel="stylesheet" href="./styles/mo-mob.css" />
+    <link rel="stylesheet" href="./styles/menu_mob.css" />
 
     <title>React App</title>
   </head>
